--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=masterjob
-DB_USERNAME=admin
+DB_DATABASE=mtc
+DB_USERNAME=root
 DB_PASSWORD=123
 
 BROADCAST_DRIVER=log
